--- a/第一章：房东天天.md
+++ b/第一章：房东天天.md
@@ -1,6 +1,10 @@
 # 第一章：房东太太
 
-:video{src="https://www.bilibili.com/video/BV1MN4y177PB?spm_id_from=333.851.b_7265636f6d6d656e64.1" controls="controls"}
+spm\_id\_from=333.851.b\_7265636f6d6d656e64.1" controls="controls"}
+
+```[bilibili]
+https://www.bilibili.com/video/BV1MN4y177PB
+```
 
 :audio{src="https://music.163.com/#/song?id=168091&market=baiduqk" controls="controls"}
 阿宾从小的语文成绩不是很好
